<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/signup_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:id="@+id/orgper">
        <RadioButton
            android:id="@+id/org"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/org"
            android:onClick="onRadioButtonClicked"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/per"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/per"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/orgpercon"
        android:layout_below="@id/orgper"
        android:orientation="vertical">
        <EditText
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_height="wrap_content"
            android:id="@+id/orgname"
            android:text="testa"
            android:hint="@string/orgname"
            android:inputType="text"/>
        <EditText
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_height="wrap_content"
            android:id="@+id/fname"
            android:hint="@string/fname"
            android:inputType="text"/>
        <EditText
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_height="wrap_content"
            android:id="@+id/lname"
            android:hint="@string/lname"
            android:inputType="text"/>
    </LinearLayout>

    <EditText
        android:imeOptions="actionNext"
        android:maxLines="1"
        android:layout_below="@id/orgpercon"
        android:layout_width="match_parent"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:text="testa@test.com"
        android:hint="@string/email"
        android:inputType="textEmailAddress"/>

    <EditText
        android:imeOptions="actionNext"
        android:maxLines="1"
        android:layout_below="@+id/email"
        android:layout_width="match_parent"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_height="wrap_content"
        android:text="testa@test.com"
        android:id="@+id/cemail"
        android:hint="@string/cemail"
        android:inputType="textEmailAddress"/>

    <EditText
        android:imeOptions="actionNext"
        android:maxLines="1"
        android:layout_below="@id/cemail"
        android:layout_width="match_parent"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="testa"
        android:layout_height="wrap_content"
        android:id="@+id/uname"
        android:hint="@string/uname"
        android:inputType="text"/>

    <EditText
        android:imeOptions="actionNext"
        android:maxLines="1"
        android:layout_below="@id/uname"
        android:layout_width="match_parent"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_height="wrap_content"
        android:id="@+id/pword"
        android:text="test"
        android:hint="@string/pword"
        android:inputType="textPassword"/>

    <EditText
        android:imeOptions="actionDone"
        android:layout_below="@id/pword"
        android:layout_width="match_parent"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_height="wrap_content"
        android:id="@+id/cpword"
        android:text="test"
        android:hint="@string/cpword"
        android:inputType="textPassword"/>

    <Button
        android:layout_below="@id/cpword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:layout_centerHorizontal="true"
        android:onClick="signUp"/>

</RelativeLayout>
