<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:imeOptions="actionNext"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_height="wrap_content"
        android:id="@+id/user"
        android:hint="@string/uname"
        android:inputType="text"/>

    <EditText
        android:imeOptions="actionDone"
        android:layout_below="@id/user"
        android:layout_width="match_parent"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_height="wrap_content"
        android:id="@+id/pass"
        android:hint="@string/pword"
        android:inputType="textPassword"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pass"
        android:layout_centerHorizontal="true"
        android:onClick="logIn"
        android:text="@string/login"/>

</RelativeLayout>
